* Fixed layout issues

--- a/src/components/resume/resume.less
+++ b/src/components/resume/resume.less
@@ -84,8 +84,9 @@
   
   #experiences {
     .products {
-      margin: 0.4rem 0;
+      margin: 0.2rem 0;
       .product {
+        margin: 0.2rem 0;
         table {
           width: 100%;
           td:first-child {
@@ -115,7 +116,7 @@
       .products {
         .product.gutter-box {
           .ant-card-body {
-            min-height: 10rem;
+            min-height: 12.5rem;
           }
         }
       }
@@ -178,7 +179,6 @@
         margin: 0 0;
         .product {
           width: 100%;
-          margin: 0.2rem 0;
           .print-product-table {
             td:first-child {
               width: 4rem;
